<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vrares.afinal.view.main.MainActivity"
    android:layout_margin="16dp">

    <EditText
        android:id="@+id/et_movie_search"
        android:hint="@string/search_for_a_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_search"
        android:text="@string/search"
        android:layout_below="@id/et_movie_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ProgressBar
        android:id="@+id/pb_loading"
        android:layout_centerHorizontal="true"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tv_info"
        android:layout_below="@id/btn_search"
        android:text="@string/finally_using_all_libraries_cross_your_fingers_and_pray_it_will_work"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>
