<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vrares.afinal.view.result.ResultActivity"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/tv_result_question"
        android:text="@string/did_it_work"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_yes"
        android:layout_below="@id/tv_result_question"
        android:text="@string/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btn_no"
        android:layout_below="@id/tv_result_question"
        android:layout_alignParentEnd="true"
        android:text="@string/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_movies"
        android:layout_below="@id/btn_no"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </android.support.v7.widget.RecyclerView>

</RelativeLayout>
